--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         </div>
     </header> 
     <main>
-        <section class="hero">
-            <div class="container hero-elements">
+         <section class="hero">
+            <div class="hero-elements">
                 <h1 class="hero-elements__title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br>ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button class="hero-elements__btn btn" type="button" data-modal-open>Заказать услугу</button>
             </div>
-        </section>
+        </section> 
         <section class="about section">
             <div class="container">
                 <ul class="about-list list">
@@ -168,7 +168,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="team-list__item">
+                   <li class="team-list__item">
                         <picture>
                             <source srcset="./images/desktop/team-second-desk-1.jpg 1x, ./images/desktop/team-second-desk-2.jpg 2x" media="(min-width:1200px)"/>
                             <source srcset="./images/tablet/team-second-tab-1.jpg 1x, ./images/tablet/team-second-tab-2.jpg 2x" media="(min-width:768px)"/>
@@ -345,7 +345,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> 
     </main> 
         <footer class="footer">
             <div class="container footer-columns">
@@ -404,7 +404,7 @@
                         </form>                   
                 </div>
             </div>
-        </footer>
+        </footer> 
         <div class="backdrop is-hidden" data-modal>
             <div class="backdrop-modal">
                 <button type="button" class="backdrop__btn" data-modal-close>
