--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header-portfolio--border-bottom">
         <div class="container">
             <a href="" class="header-logo link"><span class="header-logo__text-web">Web</span><span
                     class="header-logo__text-studio">Studio</span></a>
